# duopy

./: README.md  autograd.py  du_cls.py  math_.py
depr/src/: duals.cpp  duals.hpp  funcs.cpp  funcs.hpp
src/: CMakeLists.txt  du_functions.c  du_functions.h  dual_wrapper.c  duals.c  duals.h  duals.hpp  setup.py
